# alfredorust

./: .env  .gitignore  .secret  AGENTS.md  BACKEND_REQUESTS.md  CLAUDE.md  Cargo.toml  README.md  bacon.toml  split_axum_totp.sh
.claude/skills/spcli/: SKILL.md
.github/workflows/: deploy.yml  publish-test-reports.yml  release-spcli.yml
crates/spcli/: Cargo.toml
crates/spcli/src/: main.rs
crates/spcli/tests/: spcli_cli.rs
data/: accounts.json  categories.json  contacts.json  forecasts.json  planned_entries.json  recurring_plans.json  transactions.json  users.json
docs/: spcli.md
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts
e2e/tests/: account-mocked.spec.ts  accounts-mocked.spec.ts  accounts.live.spec.ts  admin-companies-mocked.spec.ts  admin-sat-mocked.spec.ts  admin-users-mocked.spec.ts  auth.setup.ts  cfdi-download-mocked.spec.ts  cfdi-mocked.spec.ts  charts-mocked.spec.ts  company-danger.live.spec.ts  company-switcher-mocked.spec.ts  concepts-mocked.spec.ts  finance-fields-mocked.spec.ts  finance-mocked.spec.ts  grid-mocked.spec.ts  login-mocked.spec.ts  login.spec.ts  orders-projects-mocked.spec.ts  permissions-mocked.spec.ts  permissions.live.spec.ts  recurring-generate-mocked.spec.ts  resources-mocked.spec.ts  tiempo-mocked.spec.ts
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/.cargo/: config.toml
frontend/src/: api.rs  app.rs  main.rs  theme.rs
frontend/src/api/: admin.rs  finance.rs  misc.rs  mod.rs  operations.rs
frontend/src/components/: badge.rs  button.rs  card.rs  checkbox.rs  input.rs  mod.rs  select.rs
frontend/src/pages/: account.rs  accounts.rs  categories.rs  cfdi.rs  charts.rs  companies.rs  concept_statuses.rs  contacts.rs  dashboard.rs  forecasts.rs  mod.rs  orders.rs  planned_entries.rs  project_detail.rs  projects.rs  recurring_plans.rs  resource_logs.rs  resource_usages.rs  resources.rs  sat_configs.rs  tiempo.rs  transactions.rs  users.rs
frontend/style/: input.css
openspec/: README.md  config.yaml
openspec/changes/add-cli-auth/: api-surface-inventory.md  design.md  implementation-status.md  proposal.md  tasks.md
openspec/changes/add-cli-auth/specs/auth/: spec.md
openspec/changes/add-cli-auth/specs/cli-admin/: spec.md
openspec/changes/add-spa-frontend/: design.md  proposal.md  tasks.md
openspec/changes/multi-industry-platform/: proposal.md
openspec/specs/auth/: spec.md
openspec/specs/cfdi/: spec.md
openspec/specs/finance/: spec.md
openspec/specs/harness/: spec.md
openspec/specs/projects/: spec.md
openspec/specs/resources/: spec.md
openspec/specs/tenancy/: spec.md
resources/spcli/: README.md
scripts/: smoke-test-server.sh
src/: cfdi.rs  filters.rs  lib.rs  main.bak.rs  main.rs  models.rs  openapi.rs  sat.rs  session.rs  state.rs  totp.rs
src/routes/: home.rs  login.rs  logout.rs  mod.rs  pdf.rs  profile.rs  qrcode.rs  sat.rs  secret.rs  setup.rs  test_dashboard.rs  tiempo.rs
src/routes/admin/: account.rs  cfdi_download.rs  cfdis.rs  companies.rs  finance.rs  mod.rs  project_backend.rs  projects.rs  resource_logs.rs  resources.rs  sat_configs.rs  users.rs  users_api.rs
src/routes/admin/finance/: accounts.rs  categories.rs  contacts.rs  forecasts.rs  helpers.rs  mod.rs  options.rs  orders.rs  planned_entries.rs  recurring_plans.rs  transactions.rs
src/routes/admin/project_backend/: mod.rs
src/state/: companies.rs  finance.rs  mod.rs  orders.rs  project_concepts.rs  projects.rs  resource_logs.rs  resource_usages.rs  resources.rs  sat_configs.rs  seed.rs  users.rs
src/templates/: home.html
src/templates/account/: edit.html
src/templates/admin/accounts/: form.html  index.html
src/templates/admin/categories/: form.html  index.html
src/templates/admin/cfdis/: index.html
src/templates/admin/companies/: form.html  index.html
src/templates/admin/concept_statuses/: form.html  index.html
src/templates/admin/contacts/: form.html  index.html
src/templates/admin/forecasts/: form.html  index.html
src/templates/admin/orders/: form.html  index.html
src/templates/admin/planned_entries/: bulk_pay.html  form.html  index.html  pay.html
src/templates/admin/project_concepts/: form.html
src/templates/admin/projects/: detail.html  form.html  index.html
src/templates/admin/recurring_plans/: form.html  index.html
src/templates/admin/resource_logs/: form.html  index.html
src/templates/admin/resource_usages/: form.html  index.html
src/templates/admin/resources/: form.html  index.html
src/templates/admin/sat_configs/: form.html
src/templates/admin/transactions/: form.html  index.html
src/templates/admin/users/: form.html  index.html
src/templates/layouts/: base.html
src/templates/pdf/: editor.html
src/templates/tiempo/: index.html
test-reports/playwright/: index.html
tests/: access_http.rs  auth_companies.rs  cfdi_sat_http.rs  finance_crud.rs  finance_http.rs  http_cruds.rs  project_resources.rs  projects_http.rs  resources_http.rs  seed_integration.rs  spcli_cli.rs
tests/common/: harness.rs  mod.rs
tests/harness/: README.md
(+12 files in other folders)
