[package]
name = "alfredodev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14.1"                                   # generar QR
image = "0.25.8"                                    # renderizar QR a PNG
rand = "0.9.2"                                      # generar secretos si quieres crear uno
data-encoding = "^2"
totp-rs = { version = "^5", features = ["otpauth"] }
anyhow = "1.0.100"
mongodb = "3.3.0"
futures = "0.3"
