[package]
name = "alfredodev"
version = "0.1.0"
edition = "2024"

# spcli lives in its own workspace member so it builds with only light, pure-Rust
# deps (rustls) and cross-compiles cleanly — it does not pull this crate's
# openssl/mongodb/typst dependencies.
[workspace]
members = ["crates/spcli"]

[dependencies]
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-routing"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14.1"                                      # generar QR
image = "0.25.8"                                       # renderizar QR a PNG
rand = "0.9.2"                                         # generar secretos si quieres crear uno
data-encoding = "^2"
totp-rs = { version = "^5", features = ["otpauth"] }
anyhow = "1.0.100"
aes-gcm = "0.10"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
clap = { version = "4.5", features = ["derive"] }
mongodb = "3.3.0"
futures = "0.3"
form_urlencoded = "1"
askama = { version = "0.14.0", features = ["config"] }
typst = "0.14"
typst-pdf = "0.14"
typst-assets = "0.14"
chrono = { version = "0.4", features = ["clock"] }
slug = "0.1.5"
base64 = "0.22"
dirs = "5"
openssl = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
roxmltree = "0.20"
sha1 = "0.10"
sha2 = "0.10"
zip = "2"
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5"
