[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Leptos CSR single-page app for alfredodev, served by the Axum backend."

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
