[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Leptos CSR single-page app for alfredodev, served by the Axum backend."

# Standalone workspace: the backend root Cargo.toml declares a [workspace], and
# this WASM crate must NOT be pulled into it (it would force its native-only
# deps onto a wasm32 build). An empty [workspace] makes this its own root.
[workspace]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "FormData",
    "File",
    "FileList",
    "HtmlInputElement",
    "Document",
    "Element",
    "Node",
    "NodeList",
    "HtmlElement",
    "HtmlScriptElement",
    "HtmlCollection",
] }
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
