[package]
name = "spcli"
version = "1.0.0"
edition = "2024"
description = "Command-line client for the alfredodev / Sonora Precision platform APIs"

[[bin]]
name = "spcli"
path = "src/main.rs"

[dependencies]
# Light, pure-Rust deps only (rustls, no openssl/mongodb) so spcli stays a small,
# standalone binary that cross-compiles trivially for macOS / Windows / Linux.
aes-gcm = "0.10"
anyhow = "1.0.100"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
data-encoding = "^2"
dirs = "5"
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
totp-rs = { version = "^5", features = ["otpauth"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
